--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
   </div>
   <!-- END LOADER -->
 
-   <!-- START HEADER -->
-   <header class="header_wrap fixed-top">
+  <!-- START HEADER -->
+  <header class="header_wrap fixed-top">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
@@ -119,278 +119,7 @@
   </section>
   <!-- END SECTION BANNER -->
 
-  <!-- START SECTION HOW IT WORK -->
-  <section id="how_it_work" class="how_work" data-parallax="scroll" data-image-src="assets/images/how_it_work_bg.png">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
-            <img src="assets/icon/key-attributes-of-lpn-token.png" alt="aboutimg" />
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="title_dark">
-            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">Key Attributes of LPN TOKEN
-            </span>
-            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              LPN TOKEN Beta Version Wallet
-            </h2>
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              More than 5000 cryptocurrencies are available in the market today. All of them are focused on making
-              people trade their money only. This is where our LPN TOKEN stands out of the crowd to be the best
-              cryptocurrency to invest in 2021.
-            </p>
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-              LPN TOKEN stands for LUXURIOUS PRO NETWORK TOKEN. It is multi-utility to decentralized token based on
-              ERC20 protocol of Ethereum blockchain. </p>
-          </div>
-        </div>
-        <div class="key-attributes-page col-md-12">
-          <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-            Well, this information is merely the tip of the entire iceberg. Meaning, you must know about some
-            attributes that make LPN TOKEN the best cryptocurrency to invest in 2021.
-          </p>
-          <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-            This is the first key thing you must know about LPNT. The Group is focused on exceeding the requirement
-            and expectations of users through a beta version decentralized wallet.
-          </p>
-          <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-            The use of this feature-rich, multi-utility and safe wallet wills users to perform many tasks. The list
-            includes but is not limited to the following: </p>
-        </div>
-      </div>
-      <div class="key-attributes-page row align-items-center">
-        <div class="the-legacy">
-          <div class=" col-lg-6 col-md-6 col-sm-12">
-            <div class="title_dark">
-              <div class="bus">
-                <ul>
-                  <li> Make use of ecommerce services. </li>
-                  <li> Make use of LPN TOKENS in their account to purchase any product or services. </li>
-                  <li> Send or receive money worldwide without any hassles. </li>
-                  <li> Protect your cryptocurrencies for free. </li>
-                  <li> Affordable exchange of cryptocurrencies. </li>
-                  <li> Supports most of the major international payment gateways. </li>
-                  <li> Make use of credit/debit cards and sapping of coins for buying or selling anything. </li>
-                  <li> Supports inter-crypto transfer. </li>
-                  <li> Supports payments carried out using debit/credit card, Stripe, PayPal and Venmo. </li>
-                  <li> Allows users to leverage the potential of FIAT currencies, Ethereum, Bitcoin and Altcoins. </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="title_dark">
-              <div class="bus">
-                <ul>
-                  <li> Transactions without the need of requesting anyone’s personal information. </li>
-                  <li> All successfully registered LPN TOKEN users get all coin control. </li>
-                  <li> LPN TOKEN users do not have to pay any kind of transaction charges or chargeback etc. </li>
-                  <li> This decentralized cryptocurrency wallet supports thousands of cryptocurrencies. </li>
-                  <li> It is an open platform all merchants need. </li>
-                  <li> Users will get the facility of decentralized deposit and withdrawal of payments. </li>
-                  <li> Secure payments of LPN TOKENS to other users. </li>
-                  <li> Security of payments for online gamers. </li>
-                  <li> Hassle-free forex trading. </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-    <div class="shape shap1"></div>
-  </section>
-  <!-- END SECTION HOW IT WORK -->
-
-  <!-- START SECTION ABOUT US -->
-  <section id="about" class="section_light_bg">
-    <div class="container">
-
-      <div class="row align-items-center">
-        <dv class="col-lg-12 col-md-12 col-sm-12">
-          <div class="title_dark">
-            <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp"
-              data-animation-delay="0.3s">
-              LPN TOKEN – A cryptocurrency
-            </h2>
-            <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              Decentralized Cryptocurrency Payment Gateway
-            </h2>
-          </div>
-        </dv>
-        <div class="dcpg the-legacy">
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="title_dark">
-              <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-                This is also one of the key attributes of LPN TOKEN. This will make life easier for customers and
-                merchants easier in many ways. It acts as an intermediary between the merchant and the sender. It is a
-                digital substitute required for the following:
-              </p>
-              <div class="bus">
-                <ul>
-                  <li> Replacement of physical POS (Point-of-sale). </li>
-                  <li> To verify, accept and refuse credit/debit card payments through payment card networks.
-                  </li>
-                  <p> As far as the key specifications of our decentralized cryptocurrency payment gateway are
-                    concerned, the list includes but is not limited to the following only: </p>
-                  <li> Cryptography </li>
-                  <li> No data saving on our servers. </li>
-                  <li> AVS. </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="title_dark">
-              <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-                Nowadays, you can use cryptocurrencies like LPN TOKEN to buy anything. The list includes but is not
-                limited to the following only:
-              </p>
-              <div class="bus">
-                <ul>
-                  <li> Visual cryptogram. </li>
-                  <li> Execution of measures to prevent exhaustive search attacks </li>
-                  <li> Subscriptions and recurring billing. </li>
-                  <li> Payment history. </li>
-                  <li> Supports multiple payment gateways like Amazon Pay, Paytm, Google Pay and Mobikwik etc </li>
-                  <li> Supports more than 100 modes of payment. </li>
-                  <li> Helps users accept or send decentralized payments through multiple channels like desktop and
-                    mobile app. </li>
-                  <li> Works effectively with our app compatible with Android and iOS devices. </li>
-                  <li> Does not have any direct or indirect relation or even account with any end-user. </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="dcpg-p text-center col-lg-12 col-md-12 col-sm-12">
-          <p>All in all, this is how LUXURIOUS PRO NETWORK TOKEN decentralized cryptocurrency payment gateway makes
-            LPN TOKEN the best cryptocurrency to invest in 2021. </p>
-        </div>
-      </div>
-    </div>
-    <div class="rounded_shape light_rounded_shape1"></div>
-    <div class="rounded_shape light_rounded_shape2"></div>
-  </section>
-  <!-- END SECTION ABOUT US -->
-
-  <!-- START SECTION HOW IT WORK -->
-  <section id="how_it_work" class="how_work" data-parallax="scroll" data-image-src="assets/images/how_it_work_bg.png">
-    <div class="container">
-
-
-
-      <div class="row align-items-center">
-        <dv class="col-lg-12 col-md-12 col-sm-12">
-          <div class="title_dark">
-            <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp"
-              data-animation-delay="0.3s">
-              Forex
-            </h2>
-            <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              Trading
-            </h2>
-          </div>
-        </dv>
-      </div>
-
-      <div class="row align-items-center">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
-            <img src="assets/icon/forex-trading.png" alt="aboutimg" />
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="title_dark">
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              This thing is a huge worldwide network of buyers and sellers. Forex trading can also be termed as the
-              largest global and decentralized liquidity market that records transactions of nearly five trillion US
-              dollars every day.
-
-              Coming to the point, the LUXURIOUS PRO NETWORK TOKEN group serves traders with MT-4 and MT-5, the best
-              forex trading solutions in the world.
-
-              We also house a team of heavily experienced fund managers. We are continuously making efforts to pair USD
-              and many other currencies with LPN TOKEN.
-            </p>
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-              For your kind information, LUXURIOUS PRO NETWORK TOKEN is the world’s second initiative to have paired
-              with the US dollar after JP Morgan Group.
-
-              As far as the process of forex trading is concerned, it will commence with the sale of LPN TOKENS through
-              trading accounts using in-house algorithms.
-
-              All intermediaries are removed from the process to make forex trading a positive experience for traders.
-              This is how this attribute also makes LUXURIOUS PRO NETWORK TOKEN one of the best cryptocurrency to invest
-              in 2021. </p>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-    <div class="shape shap1"></div>
-  </section>
-  <!-- END SECTION HOW IT WORK -->
-
-  <!-- START SECTION ABOUT US -->
-  <section id="about" class="section_light_bg">
-    <div class="container">
-      <div class="row align-items-center">
-        <dv class="col-lg-12 col-md-12 col-sm-12">
-          <div class="title_dark">
-            <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp"
-              data-animation-delay="0.3s">
-              LPN TOKEN – A cryptocurrency
-            </h2>
-            <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              LPN Decentralized Cryptocurrency Vault
-            </h2>
-          </div>
-        </dv>
-      </div>
-
-      <div class="row align-items-center">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="title_dark">
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              This particular feature has been designed developed for digital gaming freaks and online casino players.
-              It is the most unique financial solution users need to carry out transactions from one part of the world
-              to another.
-            </p>
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-              Registered LPN TOKEN account users can leverage the full potential of this key feature. Those who will
-              successfully complete the registration process, will be able to pay the match/tournament fee using LPN
-              TOKENS to play the match/tournament. </p>
-            <p>
-              Moreover, it also helps registered users sign a smart contract and to access live trading to enter the
-              world of financial planning and unlimited opportunities of growth. </p>
-            <p>
-              This helps users trade in any zone using their credentials. In addition to all this, this decentralized
-              vault acts as an additional layer of security required for hassle-free cryptocurrency trading and much
-              more.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
-            <img src="assets/icon/LPN-decentralized-cryptocurrency-vault.png" alt="aboutimg" />
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="rounded_shape light_rounded_shape1"></div>
-    <div class="rounded_shape light_rounded_shape2"></div>
-  </section>
-  <!-- END SECTION ABOUT US -->
-
+  
 
   <!-- START SECTION WHITEPAPER & CONTACT -->
   <section id="whitepaper">
@@ -443,28 +172,29 @@
           </div>
           <div class="col-lg-5 col-md-5 res_sm_mt_30">
             <ul class="list_none contact_info mt-margin">
-              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.1s">
                 <i class="ion-ios-location"></i>
                 <div class="contact_detail">
                   <span>Address</span>
                   <p>22 International Division Via G.B. Pirelli</p>
                 </div>
-              </li>
-              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+              </li> -->
+              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.2s">
                 <i class="ion-android-call"></i>
                 <div class="contact_detail">
                   <span>Phone</span>
                   <p>+23 0123 4567</p>
                 </div>
-              </li>
+              </li> -->
               <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.3s">
                 <i class="ion-ios-email"></i>
                 <div class="contact_detail">
                   <span>Email</span>
-                  <p>Yourmail@gmail.com</p>
+                  <p>support@lpntoken.io</p>
+                  <p>info@lpntoken.io</p>
                 </div>
               </li>
             </ul>
