--- a/corporate-alliances.html
+++ b/corporate-alliances.html
@@ -110,7 +110,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-first">
           <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
             data-animation-delay="1.5s">
-            <img src="assets/icon/contact_us_banner_img.png" alt="banner_vector" />
+            <img src="assets/icon/corporate-alliances.png" alt="banner_vector" />
           </div>
         </div>
       </div>
@@ -119,7 +119,169 @@
   </section>
   <!-- END SECTION BANNER -->
 
-  
+
+
+
+  <!-- START CLIENTS SECTION -->
+  <section class="client_logo">
+    <div class="container">
+      <div class="row align-items-center text_md_center">
+        <div class="offset-lg-1 col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
+            <img src="assets/icon/Logo/BRZZNR.png" alt="client_logo1" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+            <img src="assets/icon/Logo/iconetwork.png" alt="client_logo2" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+            <img src="assets/icon/Logo/btrc_io.png" alt="client_logo3" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+            <img src="assets/icon/Logo/ico_agency.png" alt="client_logo4" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+            <img src="assets/icon/Logo/bitcoinfo.png" alt="client_logo5" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rounded_shape light_rounded_shape1"></div>
+  </section>
+
+  <!-- END CLIENTS SECTION -->
+
+  <!-- START SECTION HOW IT WORK -->
+  <section id="how_it_work" class="how_work" data-parallax="scroll" data-image-src="assets/images/how_it_work_bg.png">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
+            <img src="assets/icon/key-attributes-of-lpn-token.png" alt="aboutimg" />
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="title_dark">
+            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">Payment moving accross the
+            </span>
+            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+              blockchain less than in 10 seconds
+            </h2>
+            <div class="bus">
+              <ul>
+                <li>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                  totam rem aperiam </li>
+                <li> vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+                  fugit, sed quia eos qui ratione voluptatem sequi nesciunt. </li>
+                <li> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                  totam rem aperiam </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="shape shap1"></div>
+  </section>
+  <!-- END SECTION HOW IT WORK -->
+
+  <!-- START SECTION ABOUT US -->
+  <section id="about" class="section_light_bg">
+    <div class="container">
+
+      <div class="row align-items-center">
+        <dv class="col-lg-12 col-md-12 col-sm-12">
+          <div class="title_dark">
+            <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp"
+              data-animation-delay="0.3s">
+              LPNTOKEN
+            </h2>
+            <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+              Communicating Nodes
+            </h2>
+          </div>
+        </dv>
+        <div class="dcpg the-legacy">
+          <div class="col-lg-8 col-md-8 col-sm-12">
+            <div class="title_dark">
+              <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+                rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+              </p>
+              <div class="bus">
+                <ul>
+                  <li> Sed ut perspiciatis unde omnis iste natus error sit voluptatem </li>
+                  <li> accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                  </li>
+                  <li> quae ab illo inventore veritatis et quasi architecto beatae vitae </li>
+                  <li> Ndicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12">
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="rounded_shape light_rounded_shape1"></div>
+    <div class="rounded_shape light_rounded_shape2"></div>
+  </section>
+  <!-- END SECTION ABOUT US -->
+
+  <!-- START SECTION ABOUT US -->
+  <section id="about" class="">
+    <div class="container">
+      <div class="divider large_divider"></div>
+      <div class="row text-center">
+        <div class="col-lg-12 col-md-12">
+          <div class="title_dark">
+            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">Database</span>
+            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+              Distributed Database
+            </h2>
+          </div>
+          <!-- <p class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+            <strong> Five Key Pillars of LUXURIOUS PRO NETWORK TOKEN </strong><br> The list includes but is not limited
+            to
+          </p> -->
+        </div>
+      </div>
+      <div class="row text-center small_space benefit_wrap">
+        <div class="col-lg-4 col-md-4 col-6">
+          <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+            <img src="assets/icon/gateway-s.png" alt="payment" />
+          </div>
+          <p>A decentralized cryptocurrency gateway</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-6">
+          <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
+            <img src="assets/icon/pair.png" alt="secure" />
+          </div>
+          <p>Pairing of LPN TOKEN with US Dollar</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-6">
+          <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+            <img src="assets/icon/LPN-decentralized-cryptocurrency-vault_small.png" alt="token" />
+          </div>
+          <p>A decentralized cryptocurrency vault</p>
+        </div>
+      </div>
+    </div>
+    <div class="rounded_shape light_rounded_shape1"></div>
+    <div class="rounded_shape light_rounded_shape2"></div>
+  </section>
+  <!-- END SECTION ABOUT US -->
 
   <!-- START SECTION WHITEPAPER & CONTACT -->
   <section id="whitepaper">
@@ -172,29 +334,28 @@
           </div>
           <div class="col-lg-5 col-md-5 res_sm_mt_30">
             <ul class="list_none contact_info mt-margin">
-              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.1s">
                 <i class="ion-ios-location"></i>
                 <div class="contact_detail">
                   <span>Address</span>
                   <p>22 International Division Via G.B. Pirelli</p>
                 </div>
-              </li> -->
-              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+              </li>
+              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.2s">
                 <i class="ion-android-call"></i>
                 <div class="contact_detail">
                   <span>Phone</span>
                   <p>+23 0123 4567</p>
                 </div>
-              </li> -->
+              </li>
               <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.3s">
                 <i class="ion-ios-email"></i>
                 <div class="contact_detail">
                   <span>Email</span>
-                  <p>support@lpntoken.io</p>
-                  <p>info@lpntoken.io</p>
+                  <p>Yourmail@gmail.com</p>
                 </div>
               </li>
             </ul>
