--- a/terms.html
+++ b/terms.html
@@ -733,15 +733,6 @@
                             our
                             support team.&nbsp;
                         </p>
-
-
-
-
-
-
-
-
-
                     </div>
                 </div>
             </div>
@@ -752,12 +743,38 @@
 
 
 
-
-
-
     <!-- START SECTION WHITEPAPER & CONTACT -->
-    <section id="whitepaper">
+    <section id="whitepaper" class="section_light_bg">
         <div class="container">
+            <div class="row text_sm_center">
+                <div class="col-lg-7 col-md-7">
+                    <div class="title_dark">
+                        <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
+                            Download Whitepaper
+                        </h2>
+                        <p class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+                            A white paper is an authoritative report or guide that informs
+                            readers concisely about a complex issue and presents the issuing
+                            body's philosophy on the matter. It is meant to help readers
+                            understand an issue, solve a problem, or make a decision.
+                        </p>
+                        <p class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+                            Marketers create whitepapers to educate their audience about a
+                            particular issue, or explain and promote a particular
+                            methodology.
+                        </p>
+                    </div>
+                    <a class="btn btn-default animation" data-animation="fadeInUp" data-animation-delay="0.4s"
+                        href="assets/images/whitepaper-lpntoken.pdf"><span class="ion-android-download"></span>Download
+                        Now
+                        <i class="ion-ios-arrow-thin-right"></i></a>
+                </div>
+                <div class="col-lg-4 offset-lg-1 col-md-5">
+                    <div class="res_md_mt_30 animation" data-animation="fadeInRight" data-animation-delay="0.1s">
+                        <img alt="whitepaper" src="assets/images/white.jpg" />
+                    </div>
+                </div>
+            </div>
 
             <div id="contact">
                 <div class="divider large_divider"></div>
@@ -812,28 +829,29 @@
                     </div>
                     <div class="col-lg-5 col-md-5 res_sm_mt_30">
                         <ul class="list_none contact_info mt-margin">
-                            <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
-                                data-animation-delay="0.1s">
-                                <i class="ion-ios-location"></i>
-                                <div class="contact_detail">
-                                    <span>Address</span>
-                                    <p>22 International Division Via G.B. Pirelli</p>
-                                </div>
-                            </li>
-                            <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
-                                data-animation-delay="0.2s">
-                                <i class="ion-android-call"></i>
-                                <div class="contact_detail">
-                                    <span>Phone</span>
-                                    <p>+23 0123 4567</p>
-                                </div>
-                            </li>
+                            <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+                data-animation-delay="0.1s">
+                <i class="ion-ios-location"></i>
+                <div class="contact_detail">
+                  <span>Address</span>
+                  <p>22 International Division Via G.B. Pirelli</p>
+                </div>
+              </li> -->
+                            <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+                data-animation-delay="0.2s">
+                <i class="ion-android-call"></i>
+                <div class="contact_detail">
+                  <span>Phone</span>
+                  <p>+23 0123 4567</p>
+                </div>
+              </li> -->
                             <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                                 data-animation-delay="0.3s">
                                 <i class="ion-ios-email"></i>
                                 <div class="contact_detail">
                                     <span>Email</span>
-                                    <p>Yourmail@gmail.com</p>
+                                    <p>support@lpntoken.io</p>
+                                    <p>info@lpntoken.io</p>
                                 </div>
                             </li>
                         </ul>
@@ -847,7 +865,7 @@
     <!-- START SECTION WHITEPAPER & CONTACT -->
 
     <!-- START CLIENTS SECTION -->
-    <section class="section_light_bg client_logo">
+    <section class="client_logo">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
@@ -958,8 +976,10 @@
                     <div class="col-md-6">
                         <ul class="list_none footer_menu staggered-animation" data-animation="fadeInRight"
                             data-animation-delay="0.2s">
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="terms.html">Team</a></li>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="terms.html">Terms & Conditions</a></li>
                         </ul>
                     </div>
                 </div>
