--- a/FAQ.html
+++ b/FAQ.html
@@ -676,7 +676,170 @@
   </section>
   <!-- END SECTION HOW IT WORK -->
 
+  <!-- START SECTION WHITEPAPER & CONTACT -->
+  <section id="whitepaper" class="section_light_bg">
+    <div class="container">
+      <div class="row text_sm_center">
+        <div class="col-lg-7 col-md-7">
+          <div class="title_dark">
+            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
+              Download Whitepaper
+            </h2>
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+              A white paper is an authoritative report or guide that informs
+              readers concisely about a complex issue and presents the issuing
+              body's philosophy on the matter. It is meant to help readers
+              understand an issue, solve a problem, or make a decision.
+            </p>
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+              Marketers create whitepapers to educate their audience about a
+              particular issue, or explain and promote a particular
+              methodology.
+            </p>
+          </div>
+          <a class="btn btn-default animation" data-animation="fadeInUp" data-animation-delay="0.4s"
+            href="assets/images/whitepaper-lpntoken.pdf"><span class="ion-android-download"></span>Download Now
+            <i class="ion-ios-arrow-thin-right"></i></a>
+        </div>
+        <div class="col-lg-4 offset-lg-1 col-md-5">
+          <div class="res_md_mt_30 animation" data-animation="fadeInRight" data-animation-delay="0.1s">
+            <img alt="whitepaper" src="assets/images/white.jpg" />
+          </div>
+        </div>
+      </div>
 
+      <div id="contact">
+        <div class="divider large_divider"></div>
+        <div class="row text-center">
+          <div class="col-md-12">
+            <div class="title_dark">
+              <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">Contact Us</span>
+              <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+                Get in touch!
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="divider small_divider"></div>
+        <div class="row">
+          <div class="col-md-7 col-lg-6 offset-lg-1">
+            <form method="post" name="enq" class="form_field">
+              <div class="row">
+                <div class="form-group col-md-6 animation" data-animation="fadeInUp" data-animation-delay="0.1s">
+                  <input type="text" required="required" placeholder="Enter Name *" id="first-name" class="form-control"
+                    name="name" />
+                </div>
+                <div class="form-group col-md-6 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+                  <input type="email" required="required" placeholder="Enter Email *" id="email" class="form-control"
+                    name="email" />
+                </div>
+                <div class="form-group col-md-12 animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+                  <input type="text" required="required" placeholder="Enter Subject" id="subject" class="form-control"
+                    name="subject" />
+                </div>
+                <div class="form-group col-md-12 animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+                  <textarea required="required" placeholder="Message *" id="description" class="form-control"
+                    name="message" rows="2"></textarea>
+                </div>
+                <div class="col-md-12 text-center animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+                  <button type="submit" title="Submit Your Message!" class="btn btn-default" id="submitButton"
+                    name="submit" value="Submit">
+                    Submit <i class="ion-ios-arrow-thin-right"></i>
+                  </button>
+                </div>
+                <div class="col-md-12">
+                  <div id="alert-msg" class="alert-msg text-center"></div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col-lg-5 col-md-5 res_sm_mt_30">
+            <ul class="list_none contact_info mt-margin">
+              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+                data-animation-delay="0.1s">
+                <i class="ion-ios-location"></i>
+                <div class="contact_detail">
+                  <span>Address</span>
+                  <p>22 International Division Via G.B. Pirelli</p>
+                </div>
+              </li> -->
+              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+                data-animation-delay="0.2s">
+                <i class="ion-android-call"></i>
+                <div class="contact_detail">
+                  <span>Phone</span>
+                  <p>+23 0123 4567</p>
+                </div>
+              </li> -->
+              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+                data-animation-delay="0.3s">
+                <i class="ion-ios-email"></i>
+                <div class="contact_detail">
+                  <span>Email</span>
+                  <p>support@lpntoken.io</p>
+                  <p>info@lpntoken.io</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rounded_shape light_rounded_shape1"></div>
+    <div class="rounded_shape light_rounded_shape2"></div>
+  </section>
+  <!-- START SECTION WHITEPAPER & CONTACT -->
+
+  <!-- START CLIENTS SECTION -->
+  <section class="client_logo">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-12">
+          <div class="title_dark">
+            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">Partners</span>
+            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+              Our Clients
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="row align-items-center text_md_center">
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
+            <img src="assets/images/light_client_logo1.png" alt="client_logo1" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+            <img src="assets/images/light_client_logo2.png" alt="client_logo2" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+            <img src="assets/images/light_client_logo3.png" alt="client_logo3" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+            <img src="assets/images/light_client_logo4.png" alt="client_logo4" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+            <img src="assets/images/light_client_logo5.png" alt="client_logo5" />
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-6">
+          <div class="animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+            <img src="assets/images/light_client_logo6.png" alt="client_logo6" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rounded_shape light_rounded_shape1"></div>
+  </section>
+
+  <!-- END CLIENTS SECTION -->
 
   <!-- START FOOTER SECTION -->
   <footer>
@@ -735,8 +898,10 @@
           <div class="col-md-6">
             <ul class="list_none footer_menu staggered-animation" data-animation="fadeInRight"
               data-animation-delay="0.2s">
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="terms.html">Team</a></li>
+              <li><a href="privacy.html">Privacy Policy</a></li>
+              <li><a href="terms.html">Terms & Conditions</a></li>
             </ul>
           </div>
         </div>
