--- a/community.html
+++ b/community.html
@@ -73,7 +73,7 @@
             <li>
               <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
-            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSITE</a></li>
+            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSIGHT</a></li>
             <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
             <li>
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
@@ -502,7 +502,7 @@
             <ul class="list_none footer_menu staggered-animation" data-animation="fadeInRight"
               data-animation-delay="0.2s">
               <li><a href="index.html">Home</a></li>
-              <li><a href="terms.html">Team</a></li>
+              <li><a href="team.html">Team</a></li>
               <li><a href="privacy.html">Privacy Policy</a></li>
               <li><a href="terms.html">Terms & Conditions</a></li>
             </ul>
