--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li>
               <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
-            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSITE</a></li>
+            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSIGHT</a></li>
             <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
             <li>
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
@@ -269,7 +269,7 @@
       <div class="row text-center small_space benefit_wrap">
         <div class="col-lg-4 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-            <img src="assets/icon/gateway-s.png" alt="payment" />
+            <img src="assets/icon/barcode.png" alt="payment" />
           </div>
           <p>A decentralized cryptocurrency gateway</p>
         </div>
@@ -1116,7 +1116,7 @@
                   <div class="card-body gradient_box">
                     <p>Please refer to the <a href="Roadmap.html" target="_blank"> ROADMAP </a>section available on our
                       website.
-                      You can even download our <a href="assets/images/whitepaper-lpntoken.pdf" target="_blank">
+                      You can even download our <a href="assets/images/whitepaper-lpntoken.pdf" target="_blank" >
                         WHITEPAPER </a> for seeking detailed answer to your question.</p>
                   </div>
                 </div>
@@ -1524,7 +1524,7 @@
             </p>
           </div>
           <a class="btn btn-default animation" data-animation="fadeInUp" data-animation-delay="0.4s"
-            href="assets/images/whitepaper-lpntoken.pdf"><span class="ion-android-download"></span>Download Now
+            href="assets/images/whitepaper-lpntoken.pdf" target="_blank"><span class="ion-android-download"></span>Download Now
             <i class="ion-ios-arrow-thin-right"></i></a>
         </div>
         <div class="col-lg-4 offset-lg-1 col-md-5">
@@ -1725,7 +1725,7 @@
             <ul class="list_none footer_menu staggered-animation" data-animation="fadeInRight"
               data-animation-delay="0.2s">
               <li><a href="index.html">Home</a></li>
-              <li><a href="terms.html">Team</a></li>
+              <li><a href="team.html">Team</a></li>
               <li><a href="privacy.html">Privacy Policy</a></li>
               <li><a href="terms.html">Terms & Conditions</a></li>
             </ul>
