--- a/what-is-lpnt.html
+++ b/what-is-lpnt.html
@@ -72,7 +72,7 @@
             <li>
               <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
-            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSITE</a></li>
+            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSIGHT</a></li>
             <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
             <li>
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
@@ -168,16 +168,16 @@
   <section id="about" class="section_light_bg">
     <div class="container">
       <div class="title_dark">
-        <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+        <h2 class="margin0 section_title text-center animation" data-animation="fadeInUp" data-animation-delay="0.1s">
           Why Use LPN
         </h2>
-        <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+        <h2 class="section_margin text-center animation" data-animation="fadeInUp" data-animation-delay="0.1s">
           Luxurious Pro Network
         </h2>
       </div>
       <div class="row align-items-center">
         <div class="col-lg-12 col-md-12 col-sm-12">
-          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <div class="box_inner">
               <!-- <i class="ion-person-add"></i> -->
               <div class="box__icon">
@@ -193,7 +193,7 @@
               </p>
             </div>
           </div>
-          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <div class="box_inner">
               <!-- <i class="ion-ios-locked"></i> -->
               <div class="box__icon">
@@ -209,7 +209,7 @@
               </p>
             </div>
           </div>
-          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -226,7 +226,7 @@
             </div>
           </div>
 
-          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -244,7 +244,7 @@
             </div>
           </div>
 
-          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -262,7 +262,7 @@
             </div>
           </div>
 
-          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -660,7 +660,7 @@
             <ul class="list_none footer_menu staggered-animation" data-animation="fadeInRight"
               data-animation-delay="0.2s">
               <li><a href="index.html">Home</a></li>
-              <li><a href="terms.html">Team</a></li>
+              <li><a href="team.html">Team</a></li>
               <li><a href="privacy.html">Privacy Policy</a></li>
               <li><a href="terms.html">Terms & Conditions</a></li>
             </ul>
