--- a/attributes.html
+++ b/attributes.html
@@ -72,7 +72,7 @@
             <li>
               <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
-            <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSIGHT</a></li>
+            <li><a class="nav-link page-scroll active" href="attributes.html">SERVICES INSIGHT</a></li>
             <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
             <li>
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
@@ -100,7 +100,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
           <div class="banner_text">
             <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-              <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKE
+              <span>LUXURIOUS PRO NETWORK TOKEN GROUP’s </span> SERVICES INSIGHT
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
               A Cryptocurrency Adding Value To The Financial Experience Of Everyone
@@ -110,7 +110,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-first">
           <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
             data-animation-delay="1.5s">
-            <img src="assets/images/banner_vector.png" alt="banner_vector" />
+            <img src="assets/icon/what-is-lpn-token.png" alt="banner_vector" />
           </div>
         </div>
       </div>
