--- a/community.html
+++ b/community.html
@@ -74,7 +74,7 @@
               <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
             <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSIGHT</a></li>
-            <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
+            <li><a class="nav-link page-scroll active" href="community.html">COMMUNITY</a></li>
             <li>
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
             </li>
