--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
               <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
             </li>
             <li>
-              <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
+              <a class="nav-link page-scroll active" href="contact.html">CONTACT US</a>
             </li>
             <li><a href="#" class="btn btn-default">Registration</a></li>
           </ul>
