--- a/ico.html
+++ b/ico.html
@@ -67,7 +67,7 @@
                             <a class="nav-link page-scroll" href="index.html">HOME</a>
                         </li>
                         <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
-                        <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
+                        <li><a class="nav-link page-scroll active" href="ico.html">ICO</a></li>
                         <li>
                             <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
                         </li>
