--- a/privacy.html
+++ b/privacy.html
@@ -102,7 +102,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
                     <div class="banner_text">
                         <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-                            <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKEN
+                            <span>LUXURIOUS PRO NETWORK TOKEN GROUP’s </span> PRIVACY POLICY 
                         </h1>
                         <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
                             A Cryptocurrency Adding Value To The Financial Experience Of Everyone
@@ -112,7 +112,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 order-first">
                     <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
                         data-animation-delay="1.5s">
-                        <img src="assets/icon/roadmap.png" alt="banner_vector" />
+                        <img src="assets/icon/privacy_policy_img.png" />
                     </div>
                 </div>
             </div>
