--- a/roadmap.html
+++ b/roadmap.html
@@ -72,7 +72,7 @@
             <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
             <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
             <li>
-              <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
+              <a class="nav-link page-scroll active" href="roadmap.html">ROADMAP</a>
             </li>
             <li><a class="nav-link page-scroll" href="attributes.html">SERVICES INSIGHT</a></li>
             <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
@@ -102,7 +102,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
           <div class="banner_text">
             <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-              <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKEN
+              <span>LUXURIOUS PRO NETWORK TOKEN GROUP’s </span> ROADMAP
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
               A Cryptocurrency Adding Value To The Financial Experience Of Everyone
