--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
             <li>
-              <a class="nav-link page-scroll" href="index.html">HOME</a>
+              <a class="nav-link page-scroll active"  href="index.html">HOME</a>
             </li>
             <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
             <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
