--- a/what-is-lpnt.html
+++ b/what-is-lpnt.html
@@ -13,7 +13,7 @@
   </title>
   <!-- Favicon Icon -->
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
-  <!--  CSS -->
+  <!-- Animation CSS -->
   <link rel="stylesheet" href="assets/css/animate.css" />
   <!-- Latest Bootstrap min CSS -->
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
@@ -52,18 +52,18 @@
   <header class="header_wrap fixed-top">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand page-scroll " href="index.html" data-="fadeInLeft"
-          data--delay="0.8s">
+        <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
+          data-animation-delay="0.8s">
           <img class="logo_light" src="assets/images/logo.svg" alt="logo" />
         </a>
-        <button class="navbar-toggler " data-="fadeInRight" data--delay="1.2s" type="button"
+        <button class="navbar-toggler animation" data-animation="fadeInRight" data-animation-delay="1.2s" type="button"
           data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="ion-android-menu"></span>
         </button>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-          <ul class="navbar-nav " data-="fadeInDown" data--delay="1.2s">
+          <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
             <li>
               <a class="nav-link page-scroll" href="index.html">HOME</a>
             </li>
@@ -99,17 +99,17 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
           <div class="banner_text">
-            <h1 class="" data-="fadeInUp" data--delay="1.5s">
+            <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
               <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKEN
             </h1>
-            <h3 class="" data-="fadeInUp" data--delay="1.6s">
+            <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
               A Cryptocurrency Adding Value To The Financial Experience Of Everyone
             </h3>
           </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 order-first">
-          <div class="banner_image_right res_md_mb_50 res_xs_mb_30 " data-="fadeInRight"
-            data--delay="1.5s">
+          <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
+            data-animation-delay="1.5s">
             <img src="assets/icon/what-is-lpn-token.png" alt="banner_vector" />
           </div>
         </div>
@@ -124,38 +124,39 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class=" res_sm_mb_30" data-="fadeInLeft" data--delay="0.1s">
+          <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
             <img src="assets/icon/about-LPNT-group.png" alt="aboutimg" />
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="title_dark">
-            <span class="" data-="fadeInUp" data--delay="0.2s">Since 2010 </span>
-            <h2 class="" data-="fadeInUp" data--delay="0.3s">
+            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">Since 2010 </span>
+            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
               About LPNT GROUP
             </h2>
-            <p class="" data-="fadeInUp" data--delay="0.4s">
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
               TPNT (LUXURIOUS PRO NETWORK) Group is an undisputed global leader in the domain of luxurious
               transportation and forex trading.
             </p>
-            <p class="" data-="fadeInUp" data--delay="0.5s">
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
               We are a group of companies handling a variety of business streams since marking inception in 2010.
             </p>
-            <p class="" data-="fadeInUp" data--delay="0.5s">
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
               Many multibillionaire investors are already rubbing shoulder with us on the investment front. Many
               prominent fund managers associated with us specialize in dealing with trading in forex.
             </p>
-            <p class="" data-="fadeInUp" data--delay="0.5s">
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
               Coming to the point, LPN TOKEN is the venture of LUXURIOUS PRO NETWORK Group. This Ethereum Blockchain
               based cryptocurrency for safe, speedy, and decentralized transactions can change the way you transact.
             </p>
-            <p class="" data-="fadeInUp" data--delay="0.5s">
+            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
               This is why LPN TOKEN could be the best cryptocurrency to invest in.
             </p>
           </div>
-          <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" class="btn btn-default video "
-            data-="fadeInUp" data--delay="0.6s"><span class="ion-play"></span>Let's Start
+          <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" class="btn btn-default video animation"
+            data-animation="fadeInUp" data-animation-delay="0.6s"><span class="ion-play"></span>Let's Start
             <i class="ion-ios-arrow-thin-right"></i></a>
+
         </div>
       </div>
     </div>
@@ -167,16 +168,16 @@
   <section id="about" class="section_light_bg">
     <div class="container">
       <div class="title_dark">
-        <h2 class="margin0 section_title text-center " data-="fadeInUp" data--delay="0.1s">
+        <h2 class="margin0 section_title text-center">
           Why Use LPN
         </h2>
-        <h2 class="section_margin text-center " data-="fadeInUp" data--delay="0.1s">
+        <h2 class="section_margin text-center">
           Luxurious Pro Network
         </h2>
       </div>
       <div class="row align-items-center">
         <div class="col-lg-12 col-md-12 col-sm-12">
-          <div class="why-use-box " data-="fadeInUp" data--delay="0.1s">
+          <div class="why-use-box animation">
             <div class="box_inner">
               <!-- <i class="ion-person-add"></i> -->
               <div class="box__icon">
@@ -192,7 +193,7 @@
               </p>
             </div>
           </div>
-          <div class="why-use-box " data-="fadeInUp" data--delay="0.1s">
+          <div class="why-use-box animation">
             <div class="box_inner">
               <!-- <i class="ion-ios-locked"></i> -->
               <div class="box__icon">
@@ -208,7 +209,7 @@
               </p>
             </div>
           </div>
-          <div class="why-use-box " data-="fadeInUp" data--delay="0.1s">
+          <div class="why-use-box animation">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -225,7 +226,7 @@
             </div>
           </div>
 
-          <div class="why-use-box " data-="fadeInUp" data--delay="0.1s">
+          <div class="why-use-box animation">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -243,7 +244,7 @@
             </div>
           </div>
 
-          <div class="why-use-box " data-="fadeInUp" data--delay="0.1s">
+          <div class="why-use-box animation">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -261,7 +262,7 @@
             </div>
           </div>
 
-          <div class="why-use-box " data-="fadeInUp" data--delay="0.1s">
+          <div class="why-use-box animation">
             <div class="box_inner">
               <!-- <i class="ion-android-cart"></i> -->
               <div class="box__icon">
@@ -295,7 +296,7 @@
       <div class="row align-items-center">
         <dv class="col-lg-12 col-md-12 col-sm-12">
           <div class="title_dark">
-            <h2 class="section_title text-center " data-="fadeInUp" data--delay="0.3s">
+            <h2 class="section_title text-center">
               LPNTOKEN as Money
             </h2>
           </div>
@@ -303,31 +304,22 @@
         <div class="the-legacy">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="title_dark">
-              <!-- <h2 class="text-center " data-="fadeInUp" data--delay="0.3s">
-               LPN TOKEN – A cryptocurrency
-            </h2> -->
-              <h2 class="" data-="fadeInUp" data--delay="0.3s">
+              <h2>
                 The legacy:
               </h2>
-
-              <p class="" data-="fadeInUp" data--delay="0.4s">
+              <p>
                 LPN TOKEN is a multi-utility token based on ERC20. It is a blockchain-based asset that offers
                 functionality like the functionality of Ether. This is why LPN TOKEN is one of the best cryptocurrencies
                 to invest in. LPNT can be used for the following:
               </p>
               <div class="row">
                 <div class="col-lg-6 col-md-6 col-6">
-                  <div class="fadeInUp" data-="fadeInUp" data--delay="0.1s"
-                    style="-delay: 0.1s; visibility: visible;">
-                    <div class="excahnage_icon"> <img src="assets/icon/exchange-of-money.png" alt="secure"> </div>
-                    <h6 class="text-center">Exchange of money.</h6>
-                  </div>
+
+                  <div class="excahnage_icon"> <img src="assets/icon/exchange-of-money.png" alt="secure"> </div>
+                  <h6 class="text-center">Exchange of money.</h6>
                 </div>
                 <div class="col-lg-6 col-md-6 col-6">
-                  <div class=" fadeInUp" data-="fadeInUp" data--delay="0.1s"
-                    style="-delay: 0.1s; visibility: visible;">
-                    <div class="excahnage_icon"> <img src="assets/icon/Transaction-in-a-different-way.png" alt="secure">
-                    </div>
+                  <div class="excahnage_icon"> <img src="assets/icon/Transaction-in-a-different-way.png" alt="secure">
                     <h6 class="text-center">Transaction in a different way.</h6>
                   </div>
                 </div>
@@ -336,10 +328,10 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="title_dark">
-              <h2 class="" data-="fadeInUp" data--delay="0.3s">
+              <h2>
                 Key Specifications of LPNT
               </h2>
-              <p class="" data-="fadeInUp" data--delay="0.4s">
+              <p>
                 The list of its specifications includes but is not limited to the following only:
               </p>
 
@@ -370,11 +362,8 @@
       <div class="row align-items-center">
         <dv class="col-lg-12 col-md-12 col-sm-12">
           <div class="title_dark">
-            <h2 class="margin0 section_title text-center" data-="fadeInUp"
-              data--delay="0.3s">
-              LPN TOKEN – A cryptocurrency
-            </h2>
-            <h2 class="section_margin text-center " data-="fadeInUp" data--delay="0.3s">
+            <span class="text-center"> LPN TOKEN – A cryptocurrency</span>
+            <h2 class="text-center">
               Benefits Usage Solutions
             </h2>
           </div>
@@ -382,7 +371,7 @@
         <div class="the-legacy">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="title_dark">
-              <p class="" data-="fadeInUp" data--delay="0.4s">
+              <p>
                 LPN TOKEN, a decentralized multi-utility token can be used in almost every industry. The list includes
                 but is not limited to the following only:
               </p>
@@ -406,7 +395,7 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="title_dark">
-              <p class="" data-="fadeInUp" data--delay="0.4s">
+              <p>
                 Nowadays, you can use cryptocurrencies like LPN TOKEN to buy anything. The list includes but is not
                 limited to the following only:
               </p>
@@ -436,15 +425,14 @@
   </section>
   <!-- END SECTION ABOUT US -->
 
-  
   <!-- START CLIENTS SECTION -->
   <section class="client_logo">
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
           <div class="title_dark">
-            <span class="" data-="fadeInUp" data--delay="0.1s">ALLIANCES</span>
-            <h2 class="" data-="fadeInUp" data--delay="0.2s">
+            <span>ALLIANCES</span>
+            <h2>
               & Partners
             </h2>
           </div>
@@ -452,34 +440,22 @@
       </div>
       <div class="row align-items-center text_md_center">
         <div class="col-lg-2 col-md-4 col-6">
-          <div class="" data-="fadeInUp" data--delay="0.1s">
-            <img src="assets/images/light_client_logo1.png" alt="client_logo1" />
-          </div>
+          <img src="assets/images/light_client_logo1.png" alt="client_logo1" />
         </div>
         <div class="col-lg-2 col-md-4 col-6">
-          <div class="" data-="fadeInUp" data--delay="0.2s">
-            <img src="assets/images/light_client_logo2.png" alt="client_logo2" />
-          </div>
+          <img src="assets/images/light_client_logo2.png" alt="client_logo2" />
         </div>
         <div class="col-lg-2 col-md-4 col-6">
-          <div class="" data-="fadeInUp" data--delay="0.3s">
-            <img src="assets/images/light_client_logo3.png" alt="client_logo3" />
-          </div>
+          <img src="assets/images/light_client_logo3.png" alt="client_logo3" />
         </div>
         <div class="col-lg-2 col-md-4 col-6">
-          <div class="" data-="fadeInUp" data--delay="0.4s">
-            <img src="assets/images/light_client_logo4.png" alt="client_logo4" />
-          </div>
+          <img src="assets/images/light_client_logo4.png" alt="client_logo4" />
         </div>
         <div class="col-lg-2 col-md-4 col-6">
-          <div class="" data-="fadeInUp" data--delay="0.5s">
-            <img src="assets/images/light_client_logo5.png" alt="client_logo5" />
-          </div>
+          <img src="assets/images/light_client_logo5.png" alt="client_logo5" />
         </div>
         <div class="col-lg-2 col-md-4 col-6">
-          <div class="" data-="fadeInUp" data--delay="0.6s">
-            <img src="assets/images/light_client_logo6.png" alt="client_logo6" />
-          </div>
+          <img src="assets/images/light_client_logo6.png" alt="client_logo6" />
         </div>
       </div>
     </div>
@@ -494,14 +470,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2">
-            <div class="footer_logo" data-="fadeInUp" data--delay="0.1s">
+            <div>
               <a href="index.html"><img alt="logo" src="assets/images/logo.svg" /></a>
             </div>
             <div class="newsletter_form large_space">
-              <h4 class="" footer_title" data-="fadeInUp" data--delay="0.2s">
+              <h4>
                 Subscribe Our Newsletter
               </h4>
-              <form class="" data-="fadeInUp" data--delay="0.3s">
+              <form>
                 <div class="outline_input">
                   <input type="text" required placeholder="Enter Email Address" />
                 </div>
@@ -512,21 +488,21 @@
               </form>
             </div>
             <ul class="list_none footer_social">
-              <li class="" data-="fadeInUp" data--delay="0.1s">
+              <li>
                 <a href="https://www.facebook.com/LpnTokenPro/" target="_blank"><i class="ion-social-facebook"></i></a>
               </li>
-              <li class="" data-="fadeInUp" data--delay="0.3s">
+              <li>
                 <a href="https://twitter.com/lpntoken" target="_blank"><i class="ion-social-twitter"></i></a>
               </li>
-              <li class="" data-="fadeInUp" data--delay="0.5s">
+              <li>
                 <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i
                     class="ion-social-youtube"></i></a>
               </li>
-              <li class="" data-="fadeInUp" data--delay="0.7s">
+              <li>
                 <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i class="ion-social-linkedin"
                     target="_blank"></i></a>
               </li>
-              <li class="" data-="fadeInUp" data--delay="0.9s">
+              <li>
                 <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram"
                     aria-hidden="true"></i></a>
               </li>
@@ -540,13 +516,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="copyright" data-="fadeInLeft" data--delay="0.1s">
+            <p class="copyright">
               Copyright © 2018 All Rights Reserved.
             </p>
           </div>
           <div class="col-md-6">
-            <ul class="list_none footer_menu" data-="fadeInRight"
-              data--delay="0.2s">
+            <ul class="list_none footer_menu">
               <li><a href="index.html">Home</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="privacy.html">Privacy Policy</a></li>
@@ -559,23 +534,8 @@
   </footer>
   <!-- END FOOTER SECTION -->
 
-  <div class="modal fade video" id="video" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body" id="yt-player">
-          <iframe width="100%" height="500px" src="https://www.youtube.com/embed/S1zQs14uxK8" frameborder="0"
-            allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <a href="#" class="scrollup btn-default " data-="zoomIn" data--delay="0.1s"
+  <a href="#" class="scrollup btn-default animation" data-animation="zoomIn" data-animation-delay="0.1s"
     style="display: none"><i class="ion-ios-arrow-up"></i></a>
 
   <!-- Latest jQuery -->
@@ -605,12 +565,7 @@
       btnText: 'Load More',
     });
 
-    $("#video").on('hidden.bs.modal', function (e) {
-      $("#video iframe").attr("src", $("#video iframe").attr("src"));
-    });
-
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
 </body>
 
 </html>
