--- a/ico.html
+++ b/ico.html
@@ -77,7 +77,7 @@
                             <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
                         </li>
                         <li>
-                            <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
+                            <a class="nav-link page-scroll" href="faq.html">FAQ</a>
                         </li>
                         <li>
                             <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
