--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
             </li>
             <li>
-              <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
+              <a class="nav-link page-scroll" href="faq.html">FAQ</a>
             </li>
             <li>
               <a class="nav-link page-scroll active" href="contact.html">CONTACT US</a>
@@ -100,7 +100,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
           <div class="banner_text">
             <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-              <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKE
+              <span>LPNT </span> FAQ
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
               A Cryptocurrency Adding Value To The Financial Experience Of Everyone
@@ -120,95 +120,8 @@
   <!-- END SECTION BANNER -->
 
   
-
-  <!-- START SECTION WHITEPAPER & CONTACT -->
-  <section id="whitepaper">
-    <div class="container">
-
-      <div id="contact">
-        <div class="divider large_divider"></div>
-        <div class="row text-center">
-          <div class="col-md-12">
-            <div class="title_dark">
-              <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">Contact Us</span>
-              <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-                Get in touch!
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="divider small_divider"></div>
-        <div class="row">
-          <div class="col-md-7 col-lg-6 offset-lg-1">
-            <form method="post" name="enq" class="form_field">
-              <div class="row">
-                <div class="form-group col-md-6 animation" data-animation="fadeInUp" data-animation-delay="0.1s">
-                  <input type="text" required="required" placeholder="Enter Name *" id="first-name" class="form-control"
-                    name="name" />
-                </div>
-                <div class="form-group col-md-6 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-                  <input type="email" required="required" placeholder="Enter Email *" id="email" class="form-control"
-                    name="email" />
-                </div>
-                <div class="form-group col-md-12 animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-                  <input type="text" required="required" placeholder="Enter Subject" id="subject" class="form-control"
-                    name="subject" />
-                </div>
-                <div class="form-group col-md-12 animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-                  <textarea required="required" placeholder="Message *" id="description" class="form-control"
-                    name="message" rows="2"></textarea>
-                </div>
-                <div class="col-md-12 text-center animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-                  <button type="submit" title="Submit Your Message!" class="btn btn-default" id="submitButton"
-                    name="submit" value="Submit">
-                    Submit <i class="ion-ios-arrow-thin-right"></i>
-                  </button>
-                </div>
-                <div class="col-md-12">
-                  <div id="alert-msg" class="alert-msg text-center"></div>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="col-lg-5 col-md-5 res_sm_mt_30">
-            <ul class="list_none contact_info mt-margin">
-              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
-                data-animation-delay="0.1s">
-                <i class="ion-ios-location"></i>
-                <div class="contact_detail">
-                  <span>Address</span>
-                  <p>22 International Division Via G.B. Pirelli</p>
-                </div>
-              </li> -->
-              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
-                data-animation-delay="0.2s">
-                <i class="ion-android-call"></i>
-                <div class="contact_detail">
-                  <span>Phone</span>
-                  <p>+23 0123 4567</p>
-                </div>
-              </li> -->
-              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
-                data-animation-delay="0.3s">
-                <i class="ion-ios-email"></i>
-                <div class="contact_detail">
-                  <span>Email</span>
-                  <p>support@lpntoken.io</p>
-                  <p>info@lpntoken.io</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="rounded_shape light_rounded_shape1"></div>
-    <div class="rounded_shape light_rounded_shape2"></div>
-  </section>
-  <!-- START SECTION WHITEPAPER & CONTACT -->
-
   <!-- START CLIENTS SECTION -->
-  <section class="section_light_bg client_logo">
+  <section class="client_logo">
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
@@ -289,14 +202,16 @@
                 <a href="https://twitter.com/lpntoken" target="_blank"><i class="ion-social-twitter"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i class="ion-social-youtube"></i></a>
+                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" target="_blank"><i
+                    class="ion-social-youtube"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.7s">
-                <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i
-                    class="ion-social-linkedin" target="_blank"></i></a>
+                <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i class="ion-social-linkedin"
+                    target="_blank"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.9s">
-                <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                <a href="https://t.me/LPNT_Official" target="_blank"><i class="fa fa-telegram"
+                    aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
@@ -315,8 +230,10 @@
           <div class="col-md-6">
             <ul class="list_none footer_menu staggered-animation" data-animation="fadeInRight"
               data-animation-delay="0.2s">
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="team.html">Team</a></li>
+              <li><a href="privacy.html">Privacy Policy</a></li>
+              <li><a href="terms.html">Terms & Conditions</a></li>
             </ul>
           </div>
         </div>
