--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               A Global Leader In The Domain Of Luxurious Transportation And Forex Trading.
             </h3>
             <p class="animation" data-animation="fadeInUp" data-animation-delay="1.7s">
-              A decentralized multi-utility token
+              A decentralized multi-utility token.
             </p>
             <div class="banner_btn animation" data-animation="fadeInUp" data-animation-delay="1.8s">
               <a href="#whitepaper" class="btn btn-default page-scroll nav-link">Whitepapter <i
@@ -137,7 +137,7 @@
               How it Works
             </h2>
             <p class="animation howit" data-animation="fadeInUp" data-animation-delay="0.2s">
-              We want to ensure highly positive financial experience to all of our registered users.</p>
+              We want to ensure highly positive financial experience for all of our registered users.</p>
             <p class="howit">This is why team
               LPN TOKEN is focused on making account creation and token buying process hassle-free.
             </p>
